--- a/MyFlatWPF/View/ContactsView.xaml
+++ b/MyFlatWPF/View/ContactsView.xaml
@@ -7,13 +7,267 @@
              mc:Ignorable="d" 
              d:DesignHeight="600" 
              d:DesignWidth="678">
+
     <Grid>
-        <StackPanel>
-            <TextBlock Text="Contacts View"
-                       HorizontalAlignment="Center"
-                       FontSize="20"
-                       Background="Transparent">
+        <Grid.Resources>
+
+            <!--<viewModel:MainWindowViewModel x:Key="MainWindowViewModel"/>-->
+
+            <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="Cursor" Value="Hand"/>
+                <!--<Setter Property="Padding" Value="5 5 5 8"/>-->
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <Border CornerRadius="3"
+                                    BorderThickness="1"
+                                    BorderBrush="Black"
+                                    Background="DeepSkyBlue">
+                                <ContentPresenter HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+        </Grid.Resources>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="0.05*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="0.05*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="0.05*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.4*"></ColumnDefinition>
+            <ColumnDefinition Width="1.9*"></ColumnDefinition>
+            <ColumnDefinition Width="3.5*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <TextBlock x:Name="tbHeaderContacts"
+                   Grid.Row="0"
+                   Grid.ColumnSpan="3"
+                   Padding="0 20 0 40"
+                   HorizontalAlignment="Center"
+                   Text="Contacts"
+                   FontSize="24"
+                   FontWeight="DemiBold">
+        </TextBlock>
+
+        <Image x:Name="iAddressImage"
+               Grid.Row="1"
+               Grid.Column="0"
+               Height="36"
+               Width="36"
+               Source="C:\repos\MyFlatWPF\MyFlatWPF\Images\Icons\geo.png"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Center"
+               Margin="10 0 0 0">
+        </Image>
+        <StackPanel x:Name="spAddressInfo"
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    Orientation="Vertical">
+            <TextBlock x:Name="tbAddressHeader"
+                   FontSize="20"
+                   FontWeight="Medium"
+                   Text="Our Office"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Left"
+                   Margin="20 10 0 0">
+            </TextBlock>
+
+            <TextBlock x:Name="tbaddressDescription"
+                       Text="123 Street, Krasnoyarsk, Russia"
+                       FontSize="14"
+                       TextWrapping="Wrap"
+                       Margin="20 10 0 0">
             </TextBlock>
         </StackPanel>
+
+        <TextBlock Grid.Row="2"
+                   Grid.ColumnSpan="2"
+                   Margin="15 0 0 0"
+                   Background="Gray"
+                   Height="1">
+            
+        </TextBlock>
+
+        <Image x:Name="iPhoneImage"
+               Grid.Row="3"
+               Grid.Column="0"
+               Height="36"
+               Width="36"
+               Source="C:\repos\MyFlatWPF\MyFlatWPF\Images\Icons\phone-contact.png"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Center"
+               Margin="10 0 0 0">
+        </Image>
+        <StackPanel x:Name="spPhoneInfo"
+                    Grid.Row="3"
+                    Grid.Column="1"
+                    Orientation="Vertical">
+            <TextBlock x:Name="tbPhoneHeader"
+                   FontSize="20"
+                   FontWeight="Medium"
+                   Text="Call Us"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Left"
+                   Margin="20 10 0 0">
+            </TextBlock>
+
+            <TextBlock x:Name="tbPhone"
+                       Text="+7 012 345 67 89"
+                       FontSize="14"
+                       TextWrapping="Wrap"
+                       Margin="20 10 0 0">
+            </TextBlock>
+        </StackPanel>
+
+        <TextBlock Grid.Row="4"
+                   Grid.ColumnSpan="2"
+                   Margin="15 0 0 0"
+                   Background="Gray"
+                   Height="1">
+
+        </TextBlock>
+
+        <Image x:Name="iEmailImage"
+               Grid.Row="5"
+               Grid.Column="0"
+               Height="36"
+               Width="36"
+               Source="C:\repos\MyFlatWPF\MyFlatWPF\Images\Icons\unitymail.png"
+               VerticalAlignment="Center"
+               Margin="10 0 0 0">
+        </Image>
+        <StackPanel x:Name="spEmailInfo"
+                    Grid.Row="5"
+                    Grid.Column="1"
+                    Orientation="Vertical">
+            <TextBlock x:Name="tbEmailHeader"
+                   FontSize="20"
+                   FontWeight="Medium"
+                   Text="Mail Us"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Left"
+                   Margin="20 10 0 0">
+            </TextBlock>
+
+            <TextBlock x:Name="tbEmail"
+                       Text="info@example.com"
+                       FontSize="14"
+                       TextWrapping="Wrap"
+                       Margin="20 10 0 0">
+            </TextBlock>
+        </StackPanel>
+
+        <TextBlock Grid.Row="6"
+                   Grid.ColumnSpan="2"
+                   Margin="15 0 0 0"
+                   Background="Gray"
+                   Height="1">
+
+        </TextBlock>
+
+        <StackPanel x:Name="spSocialLinks"
+                    Grid.Row="7"
+                    Grid.ColumnSpan="2"
+                    Orientation="Horizontal"
+                    Margin="0 30 0 0">
+            <TextBlock x:Name="tbTelegram"
+                       Margin="30 0 0 0"
+                       Height="36"
+                       Width="36">
+            <Hyperlink x:Name="hlTelegram"
+                       NavigateUri="https://telegram.org"
+                       TextDecorations="none"
+                       ToolTip="Navigate to Telegram web"
+                       Cursor="Hand">
+                <Border x:Name="bTelegramImage"
+                        BorderThickness="0"
+                        Height="36"
+                        Width="36"
+                        CornerRadius="5">
+                    <Border.Background>
+                        <ImageBrush>
+                            <ImageBrush.ImageSource>
+                                <BitmapImage UriSource="C:\repos\MyFlatWPF\MyFlatWPF\Images\Icons\icon-telegram-48.png"/>
+                            </ImageBrush.ImageSource>
+                        </ImageBrush>
+                    </Border.Background>
+                </Border>
+            </Hyperlink>
+            </TextBlock>
+
+            <TextBlock x:Name="tbYouTube"
+                       Margin="30 0 0 0"
+                       Height="36"
+                       Width="36">
+            <Hyperlink x:Name="hlYouTube"
+                       NavigateUri="https://www.youtube.com"
+                       TextDecorations="none"
+                       ToolTip="Navigate to YouTube"
+                       Cursor="Hand">
+                <Border x:Name="bYouTubeImage"
+                        BorderThickness="0"
+                        Height="36"
+                        Width="36"
+                        CornerRadius="5">
+                    <Border.Background>
+                        <ImageBrush>
+                            <ImageBrush.ImageSource>
+                                <BitmapImage UriSource="C:\repos\MyFlatWPF\MyFlatWPF\Images\Icons\icon-youtube-48.png"/>
+                            </ImageBrush.ImageSource>
+                        </ImageBrush>
+                    </Border.Background>
+                </Border>
+            </Hyperlink>
+            </TextBlock>
+
+            <TextBlock x:Name="tbInstagram"
+                       Margin="30 0 0 0"
+                       Height="36"
+                       Width="36">
+            <Hyperlink x:Name="hlInstagram"
+                       NavigateUri="https://www.instagram.com"
+                       TextDecorations="none"
+                       ToolTip="Navigate to Instagram"
+                       Cursor="Hand">
+                <Border x:Name="bInstagramImage"
+                        BorderThickness="0"
+                        Height="36"
+                        Width="36"
+                        CornerRadius="5">
+                    <Border.Background>
+                        <ImageBrush>
+                            <ImageBrush.ImageSource>
+                                <BitmapImage UriSource="C:\repos\MyFlatWPF\MyFlatWPF\Images\Icons\icon-instagram-48.png"/>
+                            </ImageBrush.ImageSource>
+                        </ImageBrush>
+                    </Border.Background>
+                </Border>
+            </Hyperlink>
+            </TextBlock>
+
+        </StackPanel>
+
+        <Image x:Name="iAddressMap"
+               Grid.Row="1"
+               Grid.Column="2"
+               Grid.RowSpan="5"
+               Source="C:\repos\MyFlatWPF\MyFlatWPF\Images\google-map-address.jpg"
+               VerticalAlignment="Top"
+               Margin="25 0 10 0">
+            
+        </Image>
+
     </Grid>
 </UserControl>
