--- a/MyFlatWPF/MainWindow.xaml
+++ b/MyFlatWPF/MainWindow.xaml
@@ -20,16 +20,21 @@
         <help:MyMultiValueConverter x:Key="MyMultiValueConverter"/>
     </Window.Resources>
 
-    <Grid>
+    <Grid x:Name="gTopMenu">
 
         <Grid.Resources>
 
             <Style x:Key="MenuItemStyle" TargetType="{x:Type MenuItem}">
-                <Setter Property="FontSize" Value="15"/>
-                <Setter Property="Height" Value="22"/>
-                <!--<Setter Property="Margin" Value="2 0 0 4"/>-->
-                <Setter Property="Padding" Value="4 0 4 1"/>
-                <Setter Property="Background" Value="Transparent"/>
+                <Setter Property="OverridesDefaultStyle" Value="True"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type MenuItem}">
+                            <Border Background="{TemplateBinding Background}">
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
             </Style>
 
             <Style x:Key="TextBlockStyle" TargetType="{x:Type TextBlock}">
@@ -57,17 +62,19 @@
             <ColumnDefinition Width="19*" MinWidth="190"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        
 
-            <Menu x:Name="mTopLeft"
+
+        <Menu x:Name="mTopLeft"
               Grid.Row="0"
+              ItemsSource="{Binding MenuItems, Source={StaticResource MainWindowViewModel}}"
               Height="24"
               VerticalAlignment="Top"
               HorizontalAlignment="Left"
               FontSize="15"
+              Margin="10 0 0 0"
               Background="White">
 
-            <MenuItem x:Name="miHomePicture"
+            <!--<MenuItem x:Name="miHomePicture"
                       Cursor="Hand"
                       Command="{Binding SwitchViewCommand, Source={StaticResource MainWindowViewModel}}"
                       CommandParameter="{Binding Name, ElementName=miHomePicture}">
@@ -127,7 +134,7 @@
                           Margin="0 0 2 2"
                           Command="{Binding SwitchViewCommand, Source={StaticResource MainWindowViewModel}}"
                           CommandParameter="{Binding Name, ElementName=miContacts}">
-            </MenuItem>
+            </MenuItem>-->
         </Menu>
 
         <Menu x:Name="mTopRight"
@@ -203,7 +210,7 @@
                         Grid.ColumnSpan="2">
 
                 <ContentControl x:Name="ccView"
-                            Content="{Binding CurrentView, 
+                    Content="{Binding CurrentView, 
                             Source={StaticResource MainWindowViewModel}, 
                             UpdateSourceTrigger=PropertyChanged}">
 
