--- a/MyFlatWPF/MainWindow.xaml
+++ b/MyFlatWPF/MainWindow.xaml
@@ -24,13 +24,18 @@
 
         <Grid.Resources>
 
-            <Style x:Key="MenuItemStyle" TargetType="{x:Type MenuItem}">
+            <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
                 <Setter Property="OverridesDefaultStyle" Value="True"/>
+                <!--<Setter Property="Background" Value="White"/>
+                <Setter Property="Foreground" Value="Black"/>
+                <Setter Property="FontSize" Value="15"/>
+                <Setter Property="Padding" Value="5 0 2 2"/>
+                <Setter Property="Margin" Value="2 0 0 0"/>-->
                 <Setter Property="Template">
                     <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type MenuItem}">
+                        <ControlTemplate TargetType="{x:Type Button}">
                             <Border Background="{TemplateBinding Background}">
-                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Margin="1 0 1 0" />
                             </Border>
                         </ControlTemplate>
                     </Setter.Value>
@@ -64,15 +69,18 @@
 
 
 
-        <Menu x:Name="mTopLeft"
+        <StackPanel x:Name="mTopLeft"
               Grid.Row="0"
-              ItemsSource="{Binding MenuItems, Source={StaticResource MainWindowViewModel}}"
-              Height="24"
+              Height="25"
+              Orientation="Horizontal"
+              Width="430"
               VerticalAlignment="Top"
               HorizontalAlignment="Left"
-              FontSize="15"
               Margin="10 0 0 0"
-              Background="White">
+              Background="White"
+              DataContext="{Binding Mode=OneWay, Source={StaticResource MainWindowViewModel}}">
+              <!--ItemsSource="{Binding MenuItems, Source={StaticResource MainWindowViewModel}}"-->       
+              
 
             <!--<MenuItem x:Name="miHomePicture"
                       Cursor="Hand"
@@ -135,7 +143,7 @@
                           Command="{Binding SwitchViewCommand, Source={StaticResource MainWindowViewModel}}"
                           CommandParameter="{Binding Name, ElementName=miContacts}">
             </MenuItem>-->
-        </Menu>
+        </StackPanel>
 
         <Menu x:Name="mTopRight"
               Grid.Column="1"
