--- a/MyFlatWPF/MainWindow.xaml
+++ b/MyFlatWPF/MainWindow.xaml
@@ -16,7 +16,7 @@
         WindowStartupLocation="CenterScreen">
 
     <Window.Resources>
-        <viewModel:MainWindowViewModel x:Key="MainWindowViewModel"/>
+        <!--<viewModel:MainWindowViewModel x:Key="MainWindowViewModel"/>-->
         <help:MyMultiValueConverter x:Key="MyMultiValueConverter"/>
     </Window.Resources>
 
@@ -69,7 +69,7 @@
 
 
 
-        <StackPanel x:Name="mTopLeft"
+        <!--<StackPanel x:Name="mTopLeft"
               Grid.Row="0"
               Height="25"
               Orientation="Horizontal"
@@ -78,9 +78,31 @@
               HorizontalAlignment="Left"
               Margin="10 0 0 0"
               Background="White"
-              DataContext="{Binding Mode=OneWay, Source={StaticResource MainWindowViewModel}}">
-              <!--ItemsSource="{Binding MenuItems, Source={StaticResource MainWindowViewModel}}"-->       
-              
+              DataContext="{Binding SwitchViewCommand, Source={StaticResource MainWindowViewModel}, 
+                            UpdateSourceTrigger=PropertyChanged}">-->
+              <!--ItemsSource="{Binding MenuItems, Source={StaticResource MainWindowViewModel}}"-->
+
+            <!--<Border x:Name="bManagement"
+                    BorderBrush="White"
+                    BorderThickness="0 0 0 0">
+                <Button x:Name="Management"
+                    Content="Management"
+                    Cursor="Hand"
+                    FontSize="15"
+                    Foreground="Black"
+                    Background="White"
+                    Height="24"
+                    Margin="7 0 0 0"
+                    BorderThickness="0 0 0 0"
+                    BorderBrush="White"
+                    Command="{Binding Mode=OneWay}"
+                    CommandParameter="{Binding Name, ElementName=Management}"
+                    MouseEnter="btn_mouseEnter"
+                    MouseLeave="menu_mouseLeave">
+
+                </Button>
+            </Border>-->
+            
 
             <!--<MenuItem x:Name="miHomePicture"
                       Cursor="Hand"
@@ -143,9 +165,9 @@
                           Command="{Binding SwitchViewCommand, Source={StaticResource MainWindowViewModel}}"
                           CommandParameter="{Binding Name, ElementName=miContacts}">
             </MenuItem>-->
-        </StackPanel>
+        <!--</StackPanel>-->
 
-        <Menu x:Name="mTopRight"
+        <!--<Menu x:Name="mTopRight"
               Grid.Column="1"
               Height="24"
               Width="auto"
@@ -158,16 +180,16 @@
                       Header="Login"
                       Cursor="Hand"
                       Margin="0 0 2 0">
-                <!--Command="{Binding OpenLogInWindowCommand, Source={StaticResource PhoneBookWindowViewModel}}" 
-                      CommandParameter=""-->
+                --><!--Command="{Binding OpenLogInWindowCommand, Source={StaticResource PhoneBookWindowViewModel}}" 
+                      CommandParameter=""--><!--
             </MenuItem>
             <MenuItem x:Name="miRegister"
                    Header="Register"
                    Foreground="Black"
                    Margin="0 0 2 0"
                    Cursor="Hand">
-                <!--Command="{Binding OpenRegisterWindowCommand, Source={StaticResource PhoneBookWindowViewModel}}" 
-                   CommandParameter=""-->
+                --><!--Command="{Binding OpenRegisterWindowCommand, Source={StaticResource PhoneBookWindowViewModel}}" 
+                   CommandParameter=""--><!--
             </MenuItem>
 
             <MenuItem x:Name="miUserName"
@@ -181,11 +203,11 @@
                       Visibility="Collapsed"
                       Header="Logout"
                       Cursor="Hand"
-                      Margin="0 0 2 0">
+                      Margin="0 0 2 0">-->
                 <!--Command="{Binding LogOutCommand, Source={StaticResource PhoneBookWindowViewModel}}"
                       CommandParameter=""-->
-            </MenuItem>
-        </Menu>
+            <!--</MenuItem>
+        </Menu>-->
 
         <TextBlock x:Name="tbRandomPhrase"
                    Grid.Row="1"
@@ -217,10 +239,10 @@
                         Grid.Row="3"
                         Grid.ColumnSpan="2">
 
-                <ContentControl x:Name="ccView"
-                    Content="{Binding CurrentView, 
+                <ContentControl x:Name="ccView">
+                    <!--Content="{Binding CurrentView, 
                             Source={StaticResource MainWindowViewModel}, 
-                            UpdateSourceTrigger=PropertyChanged}">
+                            UpdateSourceTrigger=PropertyChanged}">-->
 
                 </ContentControl>
 
