--- a/MyFlatWPF/View/PostDetailView.xaml
+++ b/MyFlatWPF/View/PostDetailView.xaml
@@ -12,7 +12,7 @@
 
         <Grid.Resources>
 
-            <!--<viewModel:MainWindowViewModel x:Key="MainWindowViewModel"/>-->
+            <viewModel:MainWindowViewModel x:Key="MainWindowViewModel"/>
 
             <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
                 <Setter Property="FontSize" Value="16"/>
@@ -105,9 +105,10 @@
                 VerticalAlignment="Top"
                 Margin="0 10 25 0"
                 Content="Back"
-                Style="{StaticResource ButtonStyle}">
-            <!--Command="{Binding SwitchViewCommand, Source={StaticResource MainWindowViewModel}}"
-                CommandParameter="{Binding Name, ElementName=btnBackToBlog}">-->
+                ToolTip="To list posts"
+                Style="{StaticResource ButtonStyle}"
+                Command="{Binding SwitchViewCommand, Source={StaticResource MainWindowViewModel}}"
+                CommandParameter="{Binding Name, ElementName=btnBackToBlog}">
 
         </Button>
 
