--- a/MyFlatWPF/View/ProjectDetailView.xaml
+++ b/MyFlatWPF/View/ProjectDetailView.xaml
@@ -12,7 +12,7 @@
 
         <Grid.Resources>
 
-            <!--<viewModel:MainWindowViewModel x:Key="MainWindowViewModel"/>-->
+            <viewModel:MainWindowViewModel x:Key="MainWindowViewModel"/>
 
             <Style x:Key="ButtonStyle" TargetType="{x:Type Button}">
                 <Setter Property="FontSize" Value="16"/>
@@ -102,9 +102,10 @@
                 HorizontalAlignment="Right"
                 Margin="0 0 25 0"
                 Content="Back"
-                Style="{StaticResource ButtonStyle}">
-            <!--Command="{Binding SwitchViewCommand, Source={StaticResource MainWindowViewModel}}"
-                CommandParameter="{Binding Name, ElementName=btnBackToProjects}">-->
+                ToolTip="To list projects"
+                Style="{StaticResource ButtonStyle}"
+                Command="{Binding SwitchViewCommand, Source={StaticResource MainWindowViewModel}}"
+                CommandParameter="{Binding Name, ElementName=btnBackToProjects}">
 
         </Button>
 
