--- a/MyFlatWPF/MainWindow.xaml
+++ b/MyFlatWPF/MainWindow.xaml
@@ -302,11 +302,12 @@
         <TextBlock x:Name="tbRandomPhrase"
                    Grid.Row="1"
                    Grid.Column="1"
-                   Text="ECO-FRIENDLY HOUSES"
+                   Text="{Binding RandomPhrase, Source={StaticResource MainWindowViewModel}}"
                    Margin="0 0 10 0"
                    HorizontalAlignment="Right"
                    FontSize="12"
                    FontWeight="DemiBold"
+                   Foreground="DarkMagenta"
                    Background="Transparent">
         </TextBlock>
 
