--- a/MyFlatWPF/View/LoginView.xaml
+++ b/MyFlatWPF/View/LoginView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MyFlatWPF.View"
+             xmlns:viewModel="clr-namespace:MyFlatWPF.ViewModel"
              xmlns:help="clr-namespace:MyFlatWPF.HelpMethods"
              mc:Ignorable="d" 
              d:DesignHeight="600" 
@@ -12,6 +13,7 @@
     <Grid x:Name="gLogIn">
         <Grid.Resources>
 
+            <viewModel:LoginViewModel x:Key="LoginViewModel"/>
             <help:MyMultiValueConverter x:Key="MultiValueConverter"/>
 
             <Style x:Key="LogInLabel" TargetType="{x:Type Label}">
@@ -65,6 +67,7 @@
                             <Border x:Name="bg" 
                                     BorderBrush="#34b4ff" 
                                     BorderThickness="1"
+                                    Background="White"
                                     CornerRadius="3">
                                 <ScrollViewer x:Name="PART_ContentHost" 
                                               SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
@@ -97,6 +100,7 @@
                     </Setter.Value>
                 </Setter>
             </Style>
+
             <Style x:Key="{x:Type PasswordBox}" TargetType="{x:Type PasswordBox}">
                 <Setter Property="FontSize" Value="20"/>
                 <Setter Property="Height" Value="37"/>
@@ -120,26 +124,26 @@
                                               HorizontalScrollBarVisibility="Hidden" 
                                               VerticalScrollBarVisibility="Hidden"/>
                             </Border>
-                                <ControlTemplate.Triggers>
-                                    <Trigger Property="IsEnabled" Value="false">
-                                        <Setter Property="Opacity" 
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsEnabled" Value="false">
+                                    <Setter Property="Opacity" 
                                                 TargetName="borderPasswordBox" 
                                                 Value="0.56"/>
-                                    </Trigger>
-                                    <Trigger Property="IsMouseOver" Value="true">
-                                        <Setter Property="BorderBrush" 
+                                </Trigger>
+                                <Trigger Property="IsMouseOver" Value="true">
+                                    <Setter Property="BorderBrush" 
                                                 TargetName="borderPasswordBox" 
                                                 Value="#3386ff"/>
-                                    </Trigger>
-                                    <Trigger Property="IsKeyboardFocused" Value="true">
-                                        <Setter Property="BorderBrush" 
+                                </Trigger>
+                                <Trigger Property="IsKeyboardFocused" Value="true">
+                                    <Setter Property="BorderBrush" 
                                                 TargetName="borderPasswordBox" 
                                                 Value="#3386ff"/>
                                     <Setter Property="BorderThickness" 
                                                 TargetName="borderPasswordBox" 
                                                 Value="2"/>
                                 </Trigger>
-                                </ControlTemplate.Triggers>
+                            </ControlTemplate.Triggers>
                         </ControlTemplate>
                     </Setter.Value>
                 </Setter>
@@ -173,6 +177,7 @@
         <Label x:Name="lErrorEMailBox"
                Grid.Row="1"
                Grid.Column="1"
+               VerticalAlignment="Bottom"
                Style="{StaticResource LabelInputError}"/>
         <!--Content="{Binding ErrorEMailBoxLabel, Source={StaticResource MainWindowViewModel}}"
                BindingGroup="{Binding BindingGroupName=Parameters}"-->
@@ -199,7 +204,7 @@
                     
                 </Style>
             </TextBox.Resources>-->
-            
+
             <!--<TextBox.Text>
                     <Binding Path="UserName" Source="{StaticResource MainWindowViewModel}"
                  UpdateSourceTrigger="PropertyChanged" >
@@ -212,6 +217,7 @@
         <Label x:Name="lErrorPasswordBox"
                Grid.Row="3"
                Grid.Column="1"
+               VerticalAlignment="Bottom"
                Style="{StaticResource LabelInputError}"/>
         <!--BindingGroup="{Binding BindingGroupName=Parameters}"
                Content="{Binding ErrorPasswordBoxLabel, Source={StaticResource MainWindowViewModel}}"-->
@@ -228,7 +234,7 @@
                Grid.Row="5"
                Grid.Column="1"
                BindingGroup="{Binding BindingGroupName=Parameters}"
-               VerticalAlignment="Top"
+               VerticalAlignment="Center"
                HorizontalAlignment="Left"
                Width="265"
                Height="45"
@@ -253,11 +259,17 @@
                         <Setter Property="CornerRadius" Value="3"/>
                     </Style>
                 </Button.Resources>
+                <Button.Command>
+                    <Binding Path="LoginCommand" Source="{StaticResource LoginViewModel}"/>
+                </Button.Command>
                 <!--Command="{Binding LogInCommand, Source={StaticResource MainWindowViewModel}}"-->
                 <Button.CommandParameter>
                     <MultiBinding Converter="{StaticResource MultiValueConverter}">
                         <Binding Path="Text" ElementName="tbEMail"/>
                         <Binding ElementName="tbPassword"/>
+                        <Binding ElementName="lErrorEMailBox"/>
+                        <Binding ElementName="lErrorPasswordBox"/>
+                        <Binding ElementName="lErrorLogIn"/>
                     </MultiBinding>
                 </Button.CommandParameter>
             </Button>
